--- a/manifest.json
+++ b/manifest.json
@@ -1,7 +1,7 @@
 {
     "manifest_version": 2,
     "name": "Most Visited Sites",
-    "description": "Quick launch most visited sites from the chrome extension so that you don't need to open them everytime",
+    "description": "Quick launch most visited sites so that you don't need to open them everytime",
     "version": "1.0.0",
     "icons": { "128": "logo.png" },
     "browser_action": {
